vpc.tf
resource "aws_vpc" "my_vpc" {
  cidr_block = var.vpc_cidr_block

  tags = {
    Name = "${var.environment}-MyVPC"
  }
  
}
